# algo_c

./: .gitignore  compile_commands.json  meson.build
.cache/clangd/index/: lineptr.c.E13F255BD3270A3F.idx  lineptr.h.B89BF2324B3CA692.idx  main.c.5DF09EA524DB3679.idx  str_algo.c.D53395BDB63E4543.idx  str_algo.h.C0E051373DE74581.idx  str_algo_test.c.AF308508360B82FD.idx
include/: array.h
include/str/: str_algo.h
include/trivial/: lineptr.h
src/: array.c  main.c  meson.build  str_algo.c
src/trivial/: lineptr.c
test/: meson.build  str_algo_test.c  trivial_test.c
